# ansible-playbooks

./: .gitignore  Makefile  ansible.cfg  inventory.yaml  pyproject.toml  requirements.yaml
playbooks/: jenkins-reverse-proxy.yaml  setup-jenkins.yaml  upgrade.yaml
