[tool.poetry]
name = "ansible-playground"
version = "0.1.0"
description = ""
authors = ["Jakob J. Kolb <jakob.j.kolb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
